RESOLVED FIXED214630
keepalive fetch should not be blocked in pagehide event handlers
https://bugs.webkit.org/show_bug.cgi?id=214630
Summary keepalive fetch should not be blocked in pagehide event handlers
youenn fablet
Reported 2020-07-22 01:03:26 PDT
KeepAlive fetch should not be blocked in pagehide event handlers
Attachments
Patch (6.47 KB, patch)
2020-07-22 01:05 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2020-07-22 01:03:37 PDT
youenn fablet
Comment 2 2020-07-22 01:05:20 PDT
youenn fablet
Comment 3 2020-07-22 08:45:21 PDT
win failure seems related to binding generator so probably unrelated to that change.
EWS
Comment 4 2020-07-22 09:00:01 PDT
Committed r264698: <https://trac.webkit.org/changeset/264698> All reviewed patches have been landed. Closing bug and clearing flags on attachment 404906 [details].
Note You need to log in before you can comment on or make changes to this bug.