KeepAlive fetch should not be blocked in pagehide event handlers https://bugs.webkit.org/show_bug.cgi?id=214630 <rdar://problem/65564772>

Reviewed by Chris Dumez.

Source/WebCore:

Test: http/wpt/fetch/fetch-in-pagehide.html

* loader/cache/CachedResource.cpp:
(WebCore::CachedResource::load):
Allow keep alive fetches to proceed similarly to ping loads.

LayoutTests:

* http/wpt/fetch/fetch-in-pagehide-expected.txt: Added.
* http/wpt/fetch/fetch-in-pagehide.html: Added.
* http/wpt/fetch/resources/fetch-in-pagehide-window.html: Added.


Canonical link: https://commits.webkit.org/227443@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@264698 268f45cc-cd09-0410-ab3c-d52691b4dbfc